tests/file_test/testdata/let_eq_eof.expected
tests/file_test/testdata/let_eq_eof.llang: error: unexpected end of file, expect an expression after `=` for a definition
    1|let a = 
     |~~~~~~~~

